--- a/resources/private/application/application.html
+++ b/resources/private/application/application.html
@@ -96,7 +96,8 @@
                               <div>
                                 <p data-bind="ltext: 'application.permitSubtypes'"></p>
                                 <span class="application_summary_text">
-                                  <select data-bind="options: $root.permitSubtypes, value: $root.application.permitSubtype,
+                                  <select class="dropdown"
+                                          data-bind="options: $root.permitSubtypes, value: $root.application.permitSubtype,
                                                      enable: $root.authorization.ok('change-permit-sub-type'),
                                                      optionsText: function(item) {return item ? loc('permitSubtype.' + item) : loc('choose'); }"
                                           id="permitSubtypeSelect">
