--- a/resources/private/ui-components/authority-select/authority-select-template.html
+++ b/resources/private/ui-components/authority-select/authority-select-template.html
@@ -1,26 +1,21 @@
-<!DOCTYPE html>
-<html>
-<body>
-  <section class="page container">
-    <script type="text/x-jquery-tmpl" id="authority-select-template">
-      <p data-bind="ltext: 'application.assignee'"></p>
-      <!-- ko if: canEdit -->
-      <select data-test-id="assignee-select"
-              class="dropdown dropdown--full-width"
-              data-bind="disable: pending,
-                         value: assigneeId,
-                         options: authorities,
-                         optionsText: fullName,
-                         optionsValue: 'id',
-                         optionsCaption: loc('choose'),
-                         valueAllowUnset: true"></select>
-      <!-- /ko -->
-      <!-- ko ifnot: canEdit -->
-      <span data-bind="text: fullName( oldAssignee )"
-            data-test-id="assignee-span"
-            class="application_summary_text"></span>
-      <!-- /ko -->
-    </script>
-  </section>
-</body>
-</html>
+<script class="ko-template"
+        type="text/x-jquery-tmpl"
+        id="authority-select-template">
+  <p data-bind="ltext: 'application.assignee'"></p>
+  <!-- ko if: canEdit -->
+  <select data-test-id="assignee-select"
+          class="dropdown dropdown--full-width"
+          data-bind="disable: pending,
+                     value: assigneeId,
+                     options: authorities,
+                     optionsText: fullName,
+                     optionsValue: 'id',
+                     optionsCaption: loc('choose'),
+                     valueAllowUnset: true"></select>
+  <!-- /ko -->
+  <!-- ko ifnot: canEdit -->
+  <span data-bind="text: fullName( oldAssignee )"
+        data-test-id="assignee-span"
+        class="application_summary_text"></span>
+  <!-- /ko -->
+</script>
