--- a/resources/private/ui-components/change-state/change-state-template.html
+++ b/resources/private/ui-components/change-state/change-state-template.html
@@ -1,17 +1,12 @@
-<!DOCTYPE html>
-<html>
-  <body>
-    <section class="page container">
-      <script type="text/x-jquery-tmpl" id="change-state-template">
-        <p class="no-wrap-whitespace"
-           data-bind="ltext: 'state.application'"></p>
-        <select class="dropdown dropdown--full-width"
-                data-test-id="change-state-select"
-                data-bind="options: states,
-                           optionsText: stateText,
-                           value: selectedState,
-                           optionsCaption: loc( 'choose')"></select>
-      </script>
-    </section>
-  </body>
-</html>
+<script class="ko-template"
+        type="text/x-jquery-tmpl"
+        id="change-state-template">
+  <p class="no-wrap-whitespace"
+     data-bind="ltext: 'state.application'"></p>
+  <select class="dropdown dropdown--full-width"
+          data-test-id="change-state-select"
+          data-bind="options: states,
+                     optionsText: stateText,
+                     value: selectedState,
+                     optionsCaption: loc( 'choose')"></select>
+</script>
