--- a/resources/private/authority-admin/applications-settings.html
+++ b/resources/private/authority-admin/applications-settings.html
@@ -38,10 +38,17 @@
               </td>
             </tr>
             <tr data-test-id="onSubmitEmails-row">
-              <td data-bind="ltext: 'auth-admin.email-notifications.inforequest-and-submit'"></td>
+              <td data-bind="ltext: 'auth-admin.email-notifications.submit'"></td>
               <td class="value">
-                <input data-test-id="onSubmitEmails" type="text" data-bind="value: organization.submitNotificationEmails, enable: lupapisteApp.models.globalAuthModel.ok('set-organization-state-notification-email')" />
+                <input data-test-id="onSubmitEmails" type="text" data-bind="value: organization.submitNotificationEmails, enable: lupapisteApp.models.globalAuthModel.ok('set-organization-submit-notification-email')" />
                 <span class="save-indicator" data-bind="saveIndicator: organization.submitNotificationEmailsIndicator, label: false"></span>
+              </td>
+            </tr>
+            <tr>
+              <td data-bind="ltext: 'auth-admin.email-notifications.inforequest'"></td>
+              <td class="value">
+                <input type="text" data-bind="value: organization.infoRequestNotificationEmails, enable: lupapisteApp.models.globalAuthModel.ok('set-organization-inforequest-notification-email')" />
+                <span class="save-indicator" data-bind="saveIndicator: organization.infoRequestNotificationEmails, label: false"></span>
               </td>
             </tr>
           </tbody>
