--- a/resources/private/application/archival-summary-template.html
+++ b/resources/private/application/archival-summary-template.html
@@ -166,7 +166,7 @@
             <div class="retention-period" data-bind="text: retentionDescription"></div>
             <div class="personal-data" data-bind="text: personalDataDescription"></div>
             <div class="stamped"></div>
-            <div data-bind="if: $parent.showWillPublish" class="will-publish">
+            <div data-bind="if: $parent.showWillPublish && _.isFunction(metadata()['myyntipalvelu'])" class="will-publish">
               <i data-bind="visible: metadata()['myyntipalvelu']" class="lupicon-check enabled"></i>
               <span data-bind="visible: !metadata()['myyntipalvelu'](), ltext: 'no'"></span>
             </div>
