Support for fired authorities.
If an authority assigned to the application is no longer member of the
organization, the authority is shown in the select, but disabled.

--- a/resources/private/ui-components/authority-select/authority-select-template.html
+++ b/resources/private/ui-components/authority-select/authority-select-template.html
@@ -11,7 +11,8 @@
                      optionsText: fullName,
                      optionsValue: 'id',
                      optionsCaption: loc('choose'),
-                     valueAllowUnset: true"></select>
+                     valueAllowUnset: true,
+                     optionsAfterRender: disableAuthorities"></select>
   <!-- /ko -->
   <!-- ko ifnot: canEdit -->
   <span data-bind="text: fullName( oldAssignee )"
