Fonts loaded in html not scss.
Seems to fix LPK-1405.

--- a/resources/private/template.html
+++ b/resources/private/template.html
@@ -7,6 +7,7 @@
     <meta name="description"  content="Lupapiste" />
     <meta name="author"       content="Solita Oy -- http://www.solita.fi/" />
 
+    <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,200,200italic,300italic,300,400italic,600,600italic,700,700italic' rel='stylesheet' type='text/css'>
     <!-- Cloak content until css is loaded -->
     <style type="text/css">.page{display:none}</style>
     <link id="main-css" href="/lp-static/css/main.css" rel="stylesheet"></link>
