Appeal UI progressing.

--- a/resources/private/application/application.html
+++ b/resources/private/application/application.html
@@ -1123,6 +1123,7 @@
                                                   <div data-bind="ltext: 'verdict.poytakirjat.missing'"></div>
                                                   <!-- /ko -->
                                               </div>
+                                              <div data-bind="component: 'verdict-appeal'"></div>
                                           </div>
                                       </div>
                                   </div>
