--- a/resources/private/bulletins/application-bulletin/bulletin-comment/bulletin-comment-template.html
+++ b/resources/private/bulletins/application-bulletin/bulletin-comment/bulletin-comment-template.html
@@ -15,7 +15,7 @@
                                      params: { bulletinId: bulletin.bulletinId,
                                                versionId: versionId,
                                                userInfo: userInfo,
-                                               fileInputId: fileuploadService.fileInputId } }"></div>
+                                               fileInputId: fileuploadService.bindFileInput() }}"></div>
       </div>
     </script>
   </section>
