--- a/resources/private/ui-components/verdict-appeal/verdict-appeal-bubble-template.html
+++ b/resources/private/ui-components/verdict-appeal/verdict-appeal-bubble-template.html
@@ -16,29 +16,30 @@
                  class="mandatory"></label>
           <select class="dropdown mandatory"></select>
         </div>
-        <div class="col-2 col--vertical">
-                    <label data-bind="ltext: 'verdict.muutoksenhaku.tekijat'"
-                 class="mandatory"></label>
-          <input type="text" class="mandatory"
-                 data-bind="attr: {placeholder: loc('verdict.muutoksenhaku.tekijat.placeholder')},
-                            value: $parent.authors">
+        <div class="col-2">
+          <form-cell params="{required: true,
+                             label: 'verdict.muutoksenhaku.tekijat',
+                             cell: 'text',
+                             value: $parent.authors}">
+          </form-cell>
         </div>
         <div class="col-1">
-          <form-warning params="{warning: $parent.dateWarning}">
-          <label data-bind="ltext: 'verdict.muutoksenhaku.pvm'"
-                 class="mandatory"></label>
-          <input type="text" class="mandatory"
-                 data-bind="attr: {placeholder: loc('choose')},
-                            value: $parents[1].date,
-                            datepicker: $parents[1].dummy">
-          </form-warning>
+          <form-cell params="{warning: $parent.dateWarning,
+                             required: true,
+                             label: 'verdict.muutoksenhaku.pvm',
+                             cell: 'date',
+                             value: $parent.date}">
+          </form-cell>
         </div>
       </div>
       <div class="row">
-        <div class="col-4 col--vertical">
-          <label data-bind="ltext: 'verdict.muutoksenhaku.extra'"></label>
-          <textarea rows="4"
-                    data-bind="attr: {placeholder: loc('verdict.muutoksenhaku.extra.placeholder')}"></textarea>
+        <div class="col-4">
+          <form-cell params="{label: 'verdict.muutoksenhaku.extra',
+                             cell: 'textarea',
+                             value: $parent.extra,
+                             attr: {placeholder: loc('verdict.muutoksenhaku.extra.placeholder'),
+                             rows: 4}}">
+          </form-cell>
         </div>
       </div>
       <div class="row">
