--- a/resources/private/ui-components/verdict-appeal/verdict-appeal-template.html
+++ b/resources/private/ui-components/verdict-appeal/verdict-appeal-template.html
@@ -12,6 +12,7 @@
          data-bind="visible: newBubbleVisible"></div>
   </div>
   <verdict-appeal-bubble params="visible: newBubbleVisible,
-                         waiting: waiting"></verdict-appeal-bubble>
+                                 waiting: waiting,
+                                 model: bubbleModel()"></verdict-appeal-bubble>
 
 </script>
