--- a/resources/private/ui-components/verdict-appeal/verdict-appeal-bubble-template.html
+++ b/resources/private/ui-components/verdict-appeal/verdict-appeal-bubble-template.html
@@ -7,7 +7,8 @@
                          okEnabled: okEnabled,
                          buttonIcon: 'lupicon-save',
                          buttonText: 'save',
-                         waiting: params.waiting">
+                         waiting: waiting,
+                         error: error">
     <div class="form-grid form-grid--no-border">
       <div class="row">
         <span class="col-4"
