--- a/resources/private/ui-components/verdict-appeal/verdict-appeal-template.html
+++ b/resources/private/ui-components/verdict-appeal/verdict-appeal-template.html
@@ -29,13 +29,13 @@
           </ul>
         </td>
         <td class="appeals-table--action">
-          <!-- ko if: editable -->
+          <!-- ko if: $parent.canEdit( $data ) -->
           <a data-bind="ltext: 'verdict.muutoksenhaku.muokkaa',
                         toggleClick: showEdit"></a>
           <a data-bind="ltext: 'verdict.muutoksenhaku.poista',
                         click: $parent.deleteAppeal"></a>
           <!-- /ko -->
-          <!-- ko ifnot: editable -->
+          <!-- ko ifnot: $parent.canEdit ($data) -->
           <a data-bind="ltext: 'verdict.muutoksenhaku.show-extra',
                         toggleClick: showExtra"></a>
           <!-- /ko -->
@@ -54,7 +54,7 @@
       <tr class="appeals-table__note">
         <td colspan="5">
           <verdict-appeal-bubble params="visible: showEdit,
-                                         model: $parent.bubbleModel( appealId )"></verdict-appeal-bubble>
+                                         model: $parent.bubbleModel( showEdit, appealId )"></verdict-appeal-bubble>
         </td>
       </tr>
       <tr></tr>
@@ -62,7 +62,8 @@
     </tbody>
   </table>
   <!-- /ko -->
-  <div class="stacked">
+  <div class="stacked"
+       data-bind="if: canEdit()">
     <button class="positive"
             data-bind="toggleClick: newBubbleVisible">
       <i class="lupicon-circle-plus"></i>
@@ -72,6 +73,6 @@
          data-bind="visible: newBubbleVisible"></div>
   </div>
   <verdict-appeal-bubble params="visible: newBubbleVisible,
-                                 model: bubbleModel()"></verdict-appeal-bubble>
+                                 model: bubbleModel( newBubbleVisible )"></verdict-appeal-bubble>
 
 </script>
