Prevent attachment (meta)data modification when readOnly = true

--- a/resources/private/application/application.html
+++ b/resources/private/application/application.html
@@ -111,7 +111,7 @@
                               </div>
                               <!-- /ko -->
 
-                              <!-- ko if: $root.tosFunctions().length > 0 && $root.authorization.ok("store-tos-metadata-for-attachment") -->
+                              <!-- ko if: $root.tosFunctions().length > 0 && $root.authorization.ok("tos-operations-enabled") -->
                               <div>
                                 <p data-bind="ltext: 'tos.function'"></p>
                                 <select class="dropdown dropdown--full-width"
