--- a/resources/private/attachment/attachment.html
+++ b/resources/private/attachment/attachment.html
@@ -234,10 +234,9 @@
                 </button>
               </div>
 
-              <!-- ko if: $root.authorization.ok('permanent-archive-enabled') && !_.isEmpty(metadata()) && $root.authorization.ok('store-tos-metadata-for-attachment') -->
+              <!-- ko if: $root.authorization.ok('permanent-archive-enabled') && !_.isEmpty(metadata()) && $root.authorization.ok('tos-operations-enabled') -->
               <div style="margin-top: 15px;">
-                <button id="show-tos-metadata" class="btn"
-                        data-bind="click: toggleTosMetadata, visible: !_.isEmpty(metadata()) && $root.authorization.ok('store-tos-metadata-for-application')">
+                <button id="show-tos-metadata" class="btn" data-bind="click: toggleTosMetadata">
                   <i data-bind="css: {'lupicon-chevron-small-right': !showTosMetadata(),
                                       'lupicon-chevron-small-down': showTosMetadata}"></i>
                   <span data-bind="ltext: 'attachment.showTosMetadata'"></span>
