Confirmation for fetching new verdict.
The confirmation dialog is only shown when
there are appeals.

CSS tweaks for verdict tab.

--- a/resources/private/application/application.html
+++ b/resources/private/application/application.html
@@ -929,7 +929,7 @@
                                           <span data-bind="text: $index() + 1"></span>
                                       </span>
                                   </button>
-                                  <div class="accordion_content expanded">
+                                  <div class="accordion_content expanded verdict-content">
 
                                       <div data-bind="with: $parent" style="overflow: auto;">
                                           <div class="btn-container right-align"  data-bind="if: $data.draft" >
