Disable modifications in metadata editor if document is archived

--- a/resources/private/metadata-editor/metadata-editor.html
+++ b/resources/private/metadata-editor/metadata-editor.html
@@ -7,7 +7,7 @@
       <div class="editor">
         <div class="editor-header">
           <div data-bind="ltext: 'attachment.tosMetadata'"></div>
-          <div class="edit-button-container">
+          <div class="edit-button-container" data-bind="if: modificationAllowed">
             <div class="edit-button" data-bind="click: edit, if: !editable()">
               <i class="lupicon-pen edit"></i>
             </div>
