--- a/resources/private/ui-components/verdict-appeal/verdict-appeal-template.html
+++ b/resources/private/ui-components/verdict-appeal/verdict-appeal-template.html
@@ -4,7 +4,8 @@
   <h2 data-bind="ltext: 'verdict.muutoksenhaku'"></h2>
   <!-- ko if: appeals().length -->
   <table class="appeals-table"
-         data-bind="if: appeals">
+         data-bind="if: appeals,
+                    attr: {'data-test-id': 'appeals-table-' + params.test}">
     <thead><tr>
         <th data-bind="ltext: 'verdict.muutoksenhaku.tyyppi'"></th>
         <th data-bind="ltext: 'verdict.muutoksenhaku.tekijat'"></th>
@@ -13,7 +14,7 @@
         <th></th>
     </tr></thead>
     <tbody data-bind="foreach: appeals">
-      <tr>
+      <tr data-bind="attr: {'data-test-id': 'appeals-table-row-' + $index()}">
         <td data-bind="ltext: 'verdict.muutoksenhaku.' + appealType"></td>
         <td data-bind="text: authors"></td>
         <td data-bind="text: date"></td>
@@ -31,13 +32,16 @@
         <td class="appeals-table--action">
           <!-- ko if: $parent.canEdit( $data ) -->
           <a data-bind="ltext: 'verdict.muutoksenhaku.muokkaa',
-                        toggleClick: showEdit"></a>
+                        toggleClick: showEdit,
+                        attr: {'data-test-id': 'edit-appeal-' + $parent.params.test + '-' + $index()}"></a>
           <a data-bind="ltext: 'verdict.muutoksenhaku.poista',
-                        click: $parent.deleteAppeal"></a>
+                        click: $parent.deleteAppeal,
+                        attr: {'data-test-id': 'delete-appeal-' + $parent.params.test + '-' + $index()}"></a>
           <!-- /ko -->
           <!-- ko ifnot: $parent.canEdit ($data) -->
           <a data-bind="ltext: 'verdict.muutoksenhaku.show-extra',
-                        toggleClick: showExtra"></a>
+                        toggleClick: showExtra,
+                        attr: {'data-test-id': 'show-appeal-' + $parent.params.test + '-' + $index()}"></a>
           <!-- /ko -->
         </td>
       </tr>
@@ -45,7 +49,8 @@
       <tr class="appeals-table__note">
         <td colspan="5"
             data-bind="text: extra || loc( 'verdict.muutoksenhaku.no-extra'),
-                       css: extra ? 'appeals-table--extra' : 'appeals-table--no-extra'">
+                       css: extra ? 'appeals-table--extra' : 'appeals-table--no-extra',
+                       attr: {'data-test-id': 'info-appeal-' + $parent.params.test + '-' + $index()}">
         </td>
       </tr>
       <tr></tr>
@@ -54,7 +59,9 @@
       <tr class="appeals-table__note">
         <td colspan="5">
           <verdict-appeal-bubble params="visible: showEdit,
-                                         model: $parent.bubbleModel( showEdit, appealId )"></verdict-appeal-bubble>
+                                         model: $parent.bubbleModel( showEdit, appealId ),
+                                         test: $parent.params.test + '-' + $index()">
+          </verdict-appeal-bubble>
         </td>
       </tr>
       <tr></tr>
@@ -65,7 +72,8 @@
   <div class="stacked"
        data-bind="if: canEdit()">
     <button class="positive"
-            data-bind="toggleClick: newBubbleVisible">
+            data-bind="toggleClick: newBubbleVisible,
+                       attr: {'data-test-id': 'add-appeal-' + params.test}">
       <i class="lupicon-circle-plus"></i>
       <span data-bind="ltext: 'verdict.muutoksenhaku.kirjaa'"></span>
     </button>
@@ -73,6 +81,7 @@
          data-bind="visible: newBubbleVisible"></div>
   </div>
   <verdict-appeal-bubble params="visible: newBubbleVisible,
-                                 model: bubbleModel( newBubbleVisible )"></verdict-appeal-bubble>
+                                 model: bubbleModel( newBubbleVisible ),
+                                 test: params.test"></verdict-appeal-bubble>
 
 </script>
