--- a/resources/private/ui-components/verdict-appeal/verdict-appeal-bubble-template.html
+++ b/resources/private/ui-components/verdict-appeal/verdict-appeal-bubble-template.html
@@ -9,7 +9,7 @@
                          buttonText: 'save',
                          waiting: waiting,
                          error: error,
-                         prefix: test">
+                         prefix: 'appeal-' + test">
     <div class="form-grid form-grid--no-border">
       <div class="row">
         <span class="col-4"
