--- a/resources/private/application/application.html
+++ b/resources/private/application/application.html
@@ -1302,7 +1302,7 @@
                         <div data-bind="template: {name: 'application-foreman-tasks-template', data: $root.foreman}"></div>
                         <!-- /ko -->
 
-                        <div>
+                        <div class="tasks-content">
                             <div data-bind="foreach: taskGroups">
                                 <h2 data-bind="text: name" style="padding-top:1em"></h2>
                                 <div class="stacked legends">
